# otus-main-patterns-2022-11

./: .gitignore  Makefile  README.md  dev-requirements.txt  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
quadratic_equation/: main.py  test.py
space_invaders/engine/: __init__.py  exception_handler_mapper.py  exceptions.py  utils.py
space_invaders/engine/commands/: __init__.py  burn_fuel.py  change_angular_velocity.py  change_linear_velocity.py  change_straight_line_position.py  check_fuel.py  log_exception.py  log_writer.py  move.py  repeater.py  rotate.py  simple_macro_command.py
space_invaders/engine/errors/: exception_handler.py  exceptions.py
space_invaders/engine/interfaces/: __init__.py  angular_velocity.py  angular_velocity_controller.py  check_fuel.py  command.py  exception_handler.py  fuel_burner.py  linear_velocity_controller.py  move.py  rotate.py  straight_line_position_controller.py
space_invaders/engine/tests/commands/: test_change_straight_line_position.py  test_noop.py
space_invaders/tests/: test_exception_handler_mapper.py  test_rotate.py  test_utils.py  utils.py
space_invaders/tests/commands/: test_burn_fuel.py  test_change_angular_velocity.py  test_change_linear_velocity.py  test_change_straight_line_position.py  test_log_exception.py  test_log_writer.py  test_noop.py  test_repeater.py  test_simple_macro_command.py
space_invaders/tests/engine/commands/: test_burn_fuel.py  test_change_angular_velocity.py  test_change_linear_velocity.py  test_log_writer.py  (+1 more)
space_invaders/tests/errors/: test_exception_handler.py
